# normalize-kap-orthography

./: .gitignore  LICENSE  README.md  normalize_orthography.py  pyproject.toml
