[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "normalize-kap-orthography"
version = "0.1.0"
description = "Normalize Kapampangan words from Spanish-era (1730s) orthography to modern K-based orthography"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Keith Manaloto" },
]
keywords = ["kapampangan", "pampanga", "orthography", "nlp", "linguistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/keithmanaloto/normalize-kap-orthography"
Issues = "https://github.com/keithmanaloto/normalize-kap-orthography"
